--- a/fornt end design and code/Super○JiJi/image_display.html
+++ b/fornt end design and code/Super○JiJi/image_display.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <title>Audio display</title>
+  <title>Image display</title>
   <meta charset='utf-8'/>
   <link href="css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="css/header.css" type="text/css" rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="css/audio_display.css">
+  <link rel="stylesheet" type="text/css" href="css/image_display.css">
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/header.js"></script>
-  <script type="text/javascript" src="js/audio_display.js"></script>
+  <script type="text/javascript" src="js/image_display.js"></script>
 </head>
   <body>
     <div id="base" class="">
@@ -47,7 +47,7 @@
             <div id = 'Search'>
               <a href="#"><p id="Search_login" class="paragraph">Login</p></a>
               <div id = 'User'>
-                <a href="personal_page.html" ><p id="User_name" class="paragraph">Username</p></a>
+                <a href="personal_page.html"><p id="User_name" class="paragraph">Username</p></a>
                 <p id="User_circle1" class="paragraph">○</p>
                 <a href="#"><p id="User_logout" class="paragraph">Logout</p></a>
                 <p id="User_circle2" class="paragraph">○</p>
@@ -90,22 +90,23 @@
             </div>
       </div>
 
-      <div id="Audio">
-        <img id="Audio_bgd" src="images/audio_display/u0.png"/>
-        <a href="#"><img id="Download_icon" src="images/video_display/u58.png"/></a>
-        <p id="Download_txt" class="h2">Download</p>
-        <a href="#"><img id="Like_icon" class="ax_image" src="images/video_display/u62.png"/></a>
-        <p id="Like_txt" class="h2">Like</p>
-        <p id="Like_num" class="h2">111</p>
-        <a href="#"><img id="Dislike_icon" class="ax_image" src="images/video_display/u68.png"/></a>
-        <p id="Dislike_txt" class="h2">Dislike</p>
-        <p id="Dislike_num" class="h2">4</p>
-        <a href="#"><img id="Collect_icon" src="images/video_display/u56.png"/></a>
-        <p id="Collect_txt" class="h2">Collect</p>
-        <p id="Audio_title" class="h2">Starboy</p>
-        <img id="Audio_cover" src="images/video_display/image_u125.jpg"/>
-        <iframe id="Audio_lyric" class="ax_inline_frame" scrolling="auto" frameborder="0" src="lyric.html"></iframe>
-        <img id="Audio_player" class="shape" src="images/audio_display/u177.png"/>
+      <div id="Display_image">
+          <p id="Image_txt" class="h2">Image</p>
+          <img id="Image_bgd" class="shape" src="images/video_display/u0.png"/>
+          <img id="Image_display" src="images/home/photo_1.jpg"/>
+          <p id="Image_title" class="h1">GIPFEL</p>
+          <p id="Image_discription" class="paragraph"> Proin facilisis elit vitae mollis faucibus. Proin vitae massa nec mauris dictum consequat. Maecenas congue non felis a malesuada. Phasellus ullamcorper laoreet felis eu viverra. In at tincidunt tortor. Praesent tempor eros vitae elit dignissim, vitae elementum dui dapibus. Duis tristique, ligula eget lobortis accumsan, nibh enim venenatis urna, a commodo elit ex ac urna.</p>
+          
+          <a href="#"><img id="Image_download_icon" src="images/video_display/u58.png"/></a>
+          <p id="Image_download_txt" class="h2">Download</p>
+          <a href="#"><img id="Image_like_icon" class="image" src="images/video_display/u62.png"/></a>
+          <p id="Image_like_txt" class="h2">Like</p>
+          <p id="Image_like_num" class="h2">111</p>
+          <a href="#"><img id="Image_dislike_icon" class="image" src="images/video_display/u68.png"/></a>
+          <p id="Image_dislike_txt" class="h2">Dislike</p>
+          <p id="Image_dislike_num" class="h2">4</p>
+          <a href="#"><img id="Image_collect_icon" class="shape" src="images/video_display/u56.png"/></a>
+          <p id="Image_collect_txt" class="h2">Collect</p>
       </div>
 
       <div id="Display_author">
@@ -150,12 +151,11 @@
 
       <div id="Write_comment">
         <p id="Comment_title" class="h2">Comments</p>
-        <!-- Unnamed (Shape) -->
         <img id="Comment_bgd" class="ax_shape" src="images/video_display/u143.png"/>
         <textarea id="Comment_input" class="ax_text_area"></textarea>
         <img id="Comment_img" class="ax_image" data-label="Image" src="images/video_display/image_u125.jpg"/>
         <p id="Comment_name" class="h2" data-label="name">Starboy</p>
-        <a id="Comment_send" class="shape" href="#">
+        <a id="Comment_send" href="#" class="shape">
           <img id="send_button" src="images/video_display/u150.png"/>
           <p id="send_txt" class="text">Send</p>
         </a>
