--- a/fornt end design and code/Super○JiJi/video.html
+++ b/fornt end design and code/Super○JiJi/video.html
@@ -14,7 +14,8 @@
 	 <div id='header'>
         <!-- Logo -->
         <div id='logo'>
-          <p id="Logo_title">Super&nbsp; JiJi</p>
+          <p id="Logo_title1">Super</p>
+          <p id="Logo_title2">JiJi</p>
           <img id="Logo_circle" src="images/header/logo_header.png"/>
         </div>
         <!-- Navigator -->
@@ -58,15 +59,18 @@
           <div id="Login_containt" style="display:none;">
           <img id="Login_bgd" src="images/header/Login_bgd.png">
           <!-- Logo -->
-          <p id="Login_logo_title">Super&nbsp; JiJi</p>
+          <p id="Login_logo_title1">Super</p>
+          <p id="Login_logo_title2">JiJi</p>
           <img id="Login_logo_circle" src="images/header/logo_login.png"/>
 
           <form id="Input" action="action_page.php">
-              <input id="email_input" type="email" name="E-mail" value=""/>
               <p id="email_txt">E-mail Address</p>
+              <a href="signup.html"><p id="sign_txt" style="text-decoration:underline;">Sign up</p></a>
+              <input id="email_input" type="email" name="E-mail" value=""/>
 
-              <input id="pwd_input" type="password" name="pwd" value=""/>
               <p id="pwd_txt">Password</p>
+              <a href="forget.html"><p id="forget_txt" style="text-decoration:underline;">Forget</p></a>            
+              <input id="pwd_input" type="password" name="pwd" value=""/>
           </form> 
           <!-- Login -->
           <a id="Login_button" class="shape" href="#">
@@ -74,120 +78,122 @@
             <p id="Login_button_txt" class="text">LOGIN</p>
           </a>
           <!-- Sign up -->
-          <a id="Signup_button" class="shape" href="#">
+          <a id="Face_button" class="shape" href="#">
             <img id="Login_button_img" class="button " src="images/header/button.png"/>
-            <p id="Login_button_txt" class="text">SIGN UP</p>
+            <p id="Login_button_txt" class="text">FACE LOGIN</p>
           </a>
         </div>
         <div id="Login_body" style="display:none;">
           </div>
         </div>
   </div>
-  <!-- Photo -->
-	<div id='photo'>
-		<ul>
-			<li id='li1'><a href='#'><img src='images/home/photo_1.jpg'/></a></li>
-			<li id='li2'><a href='#'><img src='images/home/photo_2.png'/></a></li>
-			<li id='li3'><a href='#'><img src='images/home/photo_3.jpg'/></a></li>
-			<li id='li4'><a href='#'><img src='images/home/photo_4.jpg'/></a></li>
-		</ul>
-	</div>
-  <!-- next -->
-  <a id="next" href="#">
-    <img class="photo_nav_bgd" src="images/home/next_u123.png"/>
-    <p class="photo_nav_txt">&gt;</p>
-  </a>
+  <div class="Photo_display">
+    <!-- Photo -->
+  	<div id='photo'>
+  		<ul>
+  			<li id='li1'><a href='#'><img src='images/home/photo_1.jpg'/></a></li>
+  			<li id='li2'><a href='#'><img src='images/home/photo_2.png'/></a></li>
+  			<li id='li3'><a href='#'><img src='images/home/photo_3.jpg'/></a></li>
+  			<li id='li4'><a href='#'><img src='images/home/photo_4.jpg'/></a></li>
+  		</ul>
+  	</div>
+    <!-- next -->
+    <a id="next" href="#">
+      <img class="photo_nav_bgd" src="images/home/next_u123.png"/>
+      <p class="photo_nav_txt">&gt;</p>
+    </a>
 
-  <!-- pre -->
-  <a id="pre" href="#">
-    <img class="photo_nav_bgd" src="images/home/next_u123.png"/>
-    <p class="photo_nav_txt">&lt;</p>
-  </a>
+    <!-- pre -->
+    <a id="pre" href="#">
+      <img class="photo_nav_bgd" src="images/home/next_u123.png"/>
+      <p class="photo_nav_txt">&lt;</p>
+    </a>
 
-  <!-- mark -->
-  <div id="mark">
-    <ul>
-      <li id="markli4">
-        <a href="#"><img id="marker1" class="mark_item" src="images/home/u130.png"/></a>
-        <a href="#"><img id="marker2" class="mark_item" src="images/home/u130.png"/></a>
-        <a href="#"><img id="marker3" class="mark_item" src="images/home/u130.png"/></a>
-        <a href="#"><img id="marker4" class="mark_item" src="images/home/u128.png"/></a>
-      </li>
-      <li id="markli3">
-        <a href="#"><img id="marker1" class="mark_item" src="images/home/u130.png"/></a>
-        <a href="#"><img id="marker2" class="mark_item" src="images/home/u130.png"/></a>
-        <a href="#"><img id="marker3" class="mark_item" src="images/home/u128.png"/></a>
-        <a href="#"><img id="marker4" class="mark_item" src="images/home/u130.png"/></a>
-      </li>
-      <li id="markli2">
-        <a href="#"><img id="marker1" class="mark_item" src="images/home/u130.png"/></a>
-        <a href="#"><img id="marker2" class="mark_item" src="images/home/u128.png"/></a>
-        <a href="#"><img id="marker3" class="mark_item" src="images/home/u130.png"/></a>
-        <a href="#"><img id="marker4" class="mark_item" src="images/home/u130.png"/></a>
-      </li>
-      <li id="markli1">
-        <a href="#"><img id="marker1" class="mark_item" src="images/home/u128.png"/></a>
-        <a href="#"><img id="marker2" class="mark_item" src="images/home/u130.png"/></a>
-        <a href="#"><img id="marker3" class="mark_item" src="images/home/u130.png"/></a>
-        <a href="#"><img id="marker4" class="mark_item" src="images/home/u130.png"/></a>
-      </li>
-    </ul>
+    <!-- mark -->
+    <div id="mark">
+      <ul>
+        <li id="markli4">
+          <a href="#"><img id="marker1" class="mark_item" src="images/home/u130.png"/></a>
+          <a href="#"><img id="marker2" class="mark_item" src="images/home/u130.png"/></a>
+          <a href="#"><img id="marker3" class="mark_item" src="images/home/u130.png"/></a>
+          <a href="#"><img id="marker4" class="mark_item" src="images/home/u128.png"/></a>
+        </li>
+        <li id="markli3">
+          <a href="#"><img id="marker1" class="mark_item" src="images/home/u130.png"/></a>
+          <a href="#"><img id="marker2" class="mark_item" src="images/home/u130.png"/></a>
+          <a href="#"><img id="marker3" class="mark_item" src="images/home/u128.png"/></a>
+          <a href="#"><img id="marker4" class="mark_item" src="images/home/u130.png"/></a>
+        </li>
+        <li id="markli2">
+          <a href="#"><img id="marker1" class="mark_item" src="images/home/u130.png"/></a>
+          <a href="#"><img id="marker2" class="mark_item" src="images/home/u128.png"/></a>
+          <a href="#"><img id="marker3" class="mark_item" src="images/home/u130.png"/></a>
+          <a href="#"><img id="marker4" class="mark_item" src="images/home/u130.png"/></a>
+        </li>
+        <li id="markli1">
+          <a href="#"><img id="marker1" class="mark_item" src="images/home/u128.png"/></a>
+          <a href="#"><img id="marker2" class="mark_item" src="images/home/u130.png"/></a>
+          <a href="#"><img id="marker3" class="mark_item" src="images/home/u130.png"/></a>
+          <a href="#"><img id="marker4" class="mark_item" src="images/home/u130.png"/></a>
+        </li>
+      </ul>
+    </div>
   </div>
-
-      <div id = "Animation">
+  <div class="display_detail">
+      <div id = "Video0" class="video_display">
         <p class="Title">Animation</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
 
-        <ul id = "animation_display" class="display">
+        <ul id = "display_detail0" class="display">
         </ul>
       </div>
 
-      <div id = "Music">
+      <div id = "Video1" class="video_display">
         <p class="Title">Music</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="music_display" class="display">
+        <ul id="display_detail1" class="display">
         </ul>
       </div>
 
-      <div id = "Gaming">
+      <div id = "Video2" class="video_display">
         <p class="Title">Gaming</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="gaming_display" class="display">
+        <ul id="display_detail2" class="display">
         </ul>
       </div>
 
-      <div id = "Tech">
+      <div id = "Video3" class="video_display">
         <p class="Title">Tech&amp;Science</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="tech_display" class="display">
+        <ul id="display_detail3" class="display">
         </ul>
       </div>
 
-      <div id = "Entertainment">
+      <div id = "Video4" class="video_display">
         <p class="Title">Entertainment</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="entertainment_display" class="display">
+        <ul id="display_detail4" class="display">
         </ul>
       </div>
 
-      <div id = "TV">
+      <div id = "Video5" class="video_display">
         <p class="Title">Movies&amp;TV</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="TV_display" class="display">
+        <ul id="display_detail5" class="display">
         </ul>
       </div>
 
-      <div id = "Life">
+      <div id = "Video6" class="video_display">
         <p class="Title">Daily life</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="life_display" class="display">
+        <ul id="display_detail6" class="display">
         </ul>
       </div>
 
-      <div id = "Fashion">
+      <div id = "Video7" class="video_display">
         <p class="Title">Fashion</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="fashion_display" class="display">
+        <ul id="display_detail7" class="display">
         </ul>
       </div>
 
@@ -204,6 +210,7 @@
         <img id="slice_3" class="slice" src="images/header/slice.png"/>
         <img id="slice_4" class="slice" src="images/header/slice.png"/>
       </div>
+    </div>
 </body>
 <script type="text/javascript">
 	$('#photo').slider();
